# kb-creator

./: .gitignore  CMakeLists.txt
kirby_creator/: CMakeLists.txt
kirby_creator/src/: core_game  main.cpp  main.hpp
kirby_creator/src/common/: after_utils.hpp  utils.hpp
kirby_creator/src/common/utils/: FramePerSecond.cpp  FramePerSecond.hpp
kirby_creator/src/core/: define.hpp  global.hpp  init.hpp
kirby_creator/src/other/: Background.cpp  Background.hpp  BackgroundMusic.cpp  BackgroundMusic.hpp
kirby_creator/src/spirit/: Kirby.cpp  Kirby.hpp
